# handwriting-recognition

./: .gitignore  README.md  pyproject.toml
configs/: model.yaml
scripts/: download.sh
src/data/: analysis.py  captcha_download.py
src/handwriting_recognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: attention.py  dataloader.py  decoder.py  encoder.py  model.py  position_wise_feed_forward.py  positional_embedding.py  predict.py  train.py
src/utils/: ctc_decoding.py  early_stopping.py  transformer.py
