[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriting-recognition"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "spacy>=3.8.5",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "kagglehub"
]

